--- a/Simple QR Code Maker/Views/MainPage.xaml
+++ b/Simple QR Code Maker/Views/MainPage.xaml
@@ -4,6 +4,7 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:models="using:Simple_QR_Code_Maker.Models"
     Background="{ThemeResource SolidBackgroundFillColorBaseBrush}"
     mc:Ignorable="d">
 
@@ -41,17 +42,35 @@
                 <TextBox
                     x:Name="UrlTextBox"
                     Width="300"
+                    AcceptsReturn="True"
                     PlaceholderText="ex: http://example.com/"
                     Text="{x:Bind ViewModel.UrlText, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                     TextWrapping="Wrap" />
 
-                <Border Background="{ThemeResource CardBackgroundFillColorSecondaryBrush}" CornerRadius="4">
-                    <Image
-                        x:Name="QrCodeImage"
-                        Width="300"
-                        Height="300"
-                        CanDrag="True"
-                        Source="{x:Bind ViewModel.QrCodeSource, Mode=OneWay}" />
+                <Border
+                    MinWidth="300"
+                    MinHeight="300"
+                    MaxWidth="308"
+                    HorizontalAlignment="Center"
+                    Background="{ThemeResource CardBackgroundFillColorSecondaryBrush}"
+                    CornerRadius="4">
+                    <ItemsRepeater x:Name="ListOfCodes" ItemsSource="{x:Bind ViewModel.QrCodeBitmaps, Mode=OneWay}">
+                        <ItemsRepeater.ItemTemplate>
+                            <DataTemplate x:DataType="models:BarcodeImageItem">
+                                <Border
+                                    Padding="4"
+                                    HorizontalAlignment="Center"
+                                    VerticalAlignment="Center">
+                                    <Image
+                                        x:Name="QrCodeImage"
+                                        Width="300"
+                                        Height="300"
+                                        CanDrag="True"
+                                        Source="{x:Bind CodeAsBitmap}" />
+                                </Border>
+                            </DataTemplate>
+                        </ItemsRepeater.ItemTemplate>
+                    </ItemsRepeater>
                 </Border>
 
                 <StackPanel
@@ -61,12 +80,12 @@
                     <Button
                         x:Name="SavePngButton"
                         Command="{x:Bind ViewModel.SavePngCommand}"
-                        Content="Save PNG..."
+                        Content="Save PNG(s)..."
                         IsEnabled="{x:Bind ViewModel.CanSaveImage, Mode=OneWay}" />
                     <Button
                         x:Name="SaveSvgButton"
                         Command="{x:Bind ViewModel.SaveSvgCommand}"
-                        Content="Save SVG..."
+                        Content="Save SVG(s)..."
                         IsEnabled="{x:Bind ViewModel.CanSaveImage, Mode=OneWay}" />
                     <Button
                         Height="32"
