Tweak back bar style

--- a/Simple QR Code Maker/Views/ShellPage.xaml
+++ b/Simple QR Code Maker/Views/ShellPage.xaml
@@ -16,25 +16,20 @@
 
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="auto" />
+            <RowDefinition Height="36" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
 
-        <Button
-            Background="Transparent"
-            BorderBrush="Transparent"
+        <AppBarButton
+            VerticalAlignment="Center"
             Canvas.ZIndex="0"
             Command="{x:Bind ViewModel.BackCommand}"
+            Icon="Back"
             IsEnabled="{x:Bind ViewModel.IsBackEnabled, Mode=OneWay}"
-            Style="{ThemeResource DefaultButtonStyle}">
-            <Viewbox Height="14">
-                <SymbolIcon Symbol="Back" />
-            </Viewbox>
-        </Button>
+            Style="{StaticResource NavigationBackButtonSmallStyle}" />
         <StackPanel
             x:Name="AppTitleBar"
-            Height="40"
-            Margin="46,0,0,0"
+            Margin="36,0,0,0"
             Padding="0"
             Canvas.ZIndex="1"
             IsHitTestVisible="True"
