--- a/Simple QR Code Maker/Views/MainPage.xaml
+++ b/Simple QR Code Maker/Views/MainPage.xaml
@@ -2,11 +2,16 @@
     x:Class="Simple_QR_Code_Maker.Views.MainPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:converters="using:Simple_QR_Code_Maker.Converters"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:models="using:Simple_QR_Code_Maker.Models"
     Background="{ThemeResource SolidBackgroundFillColorBaseBrush}"
     mc:Ignorable="d">
+
+    <Page.Resources>
+        <converters:TextHasNoURLConverter x:Key="HasNoURL" />
+    </Page.Resources>
 
     <Grid>
         <ScrollViewer HorizontalScrollBarVisibility="Disabled" VerticalScrollBarVisibility="Auto">
@@ -22,8 +27,9 @@
                     MaxWidth="800"
                     AcceptsReturn="True"
                     PlaceholderText="ex: http://example.com/"
+                    ScrollViewer.HorizontalScrollBarVisibility="Auto"
                     Text="{x:Bind ViewModel.UrlText, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                    TextWrapping="Wrap" />
+                    TextWrapping="NoWrap" />
 
                 <Border
                     MinWidth="300"
@@ -40,7 +46,7 @@
                         ScrollViewer.VerticalScrollBarVisibility="Auto">
                         <GridView.ItemTemplate>
                             <DataTemplate x:DataType="models:BarcodeImageItem">
-                                <Border
+                                <Grid
                                     Margin="4"
                                     HorizontalAlignment="Center"
                                     VerticalAlignment="Center">
@@ -51,7 +57,11 @@
                                         CanDrag="True"
                                         Source="{x:Bind CodeAsBitmap}"
                                         ToolTipService.ToolTip="{x:Bind CodeAsText}" />
-                                </Border>
+                                    <InfoBar
+                                        IsOpen="{x:Bind CodeAsText, Converter={StaticResource HasNoURL}}"
+                                        Message="QR Code does not contain a URL"
+                                        Severity="Warning" />
+                                </Grid>
                             </DataTemplate>
                         </GridView.ItemTemplate>
                     </GridView>
@@ -60,7 +70,7 @@
                 <StackPanel
                     HorizontalAlignment="Center"
                     Orientation="Horizontal"
-                    Spacing="12">
+                    Spacing="10">
                     <Button
                         x:Name="SavePngButton"
                         Command="{x:Bind ViewModel.SavePngCommand}"
