Make buttons the same size

--- a/Simple QR Code Maker/Views/MainPage.xaml
+++ b/Simple QR Code Maker/Views/MainPage.xaml
@@ -11,6 +11,10 @@
 
     <Page.Resources>
         <converters:TextHasNoURLConverter x:Key="HasNoURL" />
+
+        <Style BasedOn="{StaticResource DefaultButtonStyle}" TargetType="Button">
+            <Setter Property="Height" Value="32" />
+        </Style>
     </Page.Resources>
 
     <Grid>
